# solidity-ast

./: .gitignore  README.md  ast.ipynb  pyproject.toml
src/lsp/: __init__.py  ast.py
test/: c.forge.ast.json  test_ast.py
